My first lesson

--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <p>
         This is a small paragraph!
     </p>
+    <article>
+        So the other day I was working in school on this really awesome project. We are making Websites! A M A Z I N G !!
+    </article>
+    <hr>
+    
+    <footer>
+        <small>All rights reserved. &copy; Grace Limond</small>
+    </footer>
 </body>
 </html>
